# result

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  MIGRATING.md  Makefile  README.md  README.rst  RELEASING.md  codecov.yml  justfile  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
docs/: README.md  result.md
examples/: with_result.py  without_result.py
result/: __init__.py  result.py  tests-pattern-matching.py  tests.py  typetests.py
src/result/: __init__.py  result.py
tests/: test_branching.py  test_do.py  test_pattern_matching.py  test_pipes.py  test_result.py  test_result_do.py  typetests.py
tests/type-checking/: test_result.yml
tests/type_checking/: test_result.yml
