[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "result"
description = "A Rust-like result type for Python"
readme = "README.rst"
authors = [{ name = "Danilo Bargen", email = "mail@dbrgn.ch" }]
license = { file = "LICENSE" }
keywords = ["rust", "result", "enum"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",

]
requires-python = ">=3.8"
dynamic = ["dependencies", "optional-dependencies", "version"]

[project.urls]
Homepage = "https://github.com/rustedpy/result"
Tracker = "https://github.com/rustedpy/result/issues"

[tool.setuptools.dynamic.dependencies]
file = ["requirements.txt"]

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = ["requirements-dev.txt"] }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.mypy]
python_version = "3.11"
files = ["src", "tests"]
# Exclude files with pattern matching syntax until we drop support for Python
# versions that don't support pattern matching. Trying to use with an older
# Python version results in a "invalid syntax" error from mypy
exclude = "tests/test_pattern_matching.py"
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
no_implicit_reexport = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = [
  "--tb=short",
  "--cov=result",
  "--cov=tests",
  "--cov-report=term",
  "--cov-report=xml",
  # By default, ignore tests that only run on Python 3.10+
  "--ignore=tests/test_pattern_matching.py",
]
testpaths = ["tests"]
