[project]
name = "result"
version = "0.1.0"
description = "A Rust-like result type for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Roman Kitaev", email = "802.11g@bk.ru" },
]
keywords = ["rust", "result", "enum"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "typing_extensions>=4.10.0; python_version < '3.13'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/result"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "pytest-mypy-plugins>=3.0",
    "mypy>=1.0",
    "ruff>=0.8",
]

[tool.mypy]
packages = ["result"]
mypy_path = "src"
ignore_missing_imports = true
strict = true
strict_bytes = true
local_partial_types = true
warn_unreachable = true

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D105",  # missing docstring in magic methods (__repr__, etc.)
    "D107",  # missing docstring in __init__
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "ANN",     # type annotations not required in tests
    "D",       # docstrings not required in tests
    "E731",    # lambda assignments are fine in tests
    "EM101",   # string literals in exceptions are fine in tests
    "FBT",     # boolean positional args are fine in tests
    "PLR2004", # magic values are fine in tests
    "PT009",   # use of unittest-style assertEqual
    "S101",    # assert is fine in tests
    "S307",    # eval is fine in tests
    "SLF001",  # private member access is fine in tests
    "TRY003",  # long exception messages are fine in tests
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
