[metadata]
license_file = LICENSE

[tool:pytest]
addopts = --flake8 --tb=short --cov=.
python_files = tests.py
norecursedirs = *.egg tmp* build .tox
flake8-ignore =
    *.py E126 E127 E128 W504 F811  # Note: Remove F811 after the next flake8 upgrade
    setup.py ALL
    */tests/* ALL
    */docs/* ALL
    */build/* ALL
    */venv/* ALL
    */TOXENV/* ALL
flake8-max-line-length = 99
