[metadata]
name = result
version = attr: result.__version__
description = A Rust-like result type for Python
long_description = file: README.rst
keywords = rust, result, enum
author = Danilo Bargen
author_email = mail@dbrgn.ch
maintainer = rustedpy github org members (https://github.com/rustedpy)
url = https://github.com/rustedpy/result
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only

[options]
include = result
include_package_data = True
packages = find:
python_requires = >=3.6
zip_safe = True

[options.package_data]
result = py.typed

[tool:pytest]
addopts = --flake8 --tb=short --cov=.
python_files = tests.py
norecursedirs = *.egg tmp* build .tox
flake8-ignore =
    *.py E126 E127 E128 W504
    setup.py ALL
    */tests/* ALL
    */docs/* ALL
    */build/* ALL
    */venv/* ALL
    */TOXENV/* ALL
    result/tests-pattern-matching.py ALL  # Note: Looks like pytest-flake8 doesn't support 3.10 yet
flake8-max-line-length = 99

[flake8]
max-line-length = 99
