[metadata]
name = result
version = attr: result.__version__
description = A Rust-like result type for Python
long_description = file: README.rst
keywords = rust, result, enum
author = Danilo Bargen
author_email = mail@dbrgn.ch
maintainer = rustedpy github org members (https://github.com/rustedpy)
url = https://github.com/rustedpy/result
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only

[options]
include_package_data = True
package_dir =
    =src
packages = find:
python_requires = >=3.7
zip_safe = True

[options.packages.find]
where = src

[options.package_data]
result = py.typed

[flake8]
# flake8 does not (yet?) support pyproject.toml; see
# https://github.com/PyCQA/flake8/issues/234
max-line-length = 99
exclude =
    .direnv/
    .tox/
    venv/
